prometheus/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: prometheus
          image: index.docker.io/prom/prometheus:v2.33.1
          command: ['prometheus']
          args:
            - "--config.file=/tmp/prometheus.yml"
            - "--storage.tsdb.path=/data"
            - "--web.enable-remote-write-receiver"
          volumeMounts:
            - name: data
              mountPath: /data
            - name: prometheus-config
              mountPath: /tmp/prometheus.yml
              subPath: prometheus.yml
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
