prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  tls:
  - hosts:
      - prometheus.lab.home
    secretName: prometheus-tls
  rules:
  - host: prometheus.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
